<resources>
    <string name="app_name">VisImpaired</string>
    <string name="leftButton">Влево</string>
    <string name="rightButton">Вправо</string>
    <string name="confirmButton">Войти</string>
    <string name="escapeButton">Назад</string>
    <string name="helpButton">Помощь</string>
    <string name="mainButton">Главное&#10;меню</string>
    <string name="textInput">Ввод текста</string>
</resources>