<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#050505">

    <!-- Основной контейнер с тремя колонками -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <!-- Левый столбец -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <!-- Кнопка "Влево" -->

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInput"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:layout_gravity="left"
                android:text="@string/textInput" />

            <Button
                android:id="@+id/leftButton"
                android:layout_width="234dp"
                android:layout_height="166dp"
                android:layout_weight="0.6"
                android:backgroundTint="@color/Жёлтый"
                android:text="@string/leftButton"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="34sp"
                app:rippleColor="@color/Фиолетовый" />

            <Button
                android:id="@+id/button3"
                android:layout_weight="0.2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Главное &#10; меню"
                android:textSize="30sp"
                android:visibility="invisible"
                tools:visibility="invisible" />

        </LinearLayout>

        <!-- Центральный столбец -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="vertical"
                android:gravity="center">
                <Button
                    android:id="@+id/confirmButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="@color/Жёлтый"
                    android:text="@string/confirmButton"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:textSize="34sp"
                    app:rippleColor="@color/Фиолетовый" />

                <Button
                    android:id="@+id/escapeButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="@color/Жёлтый"
                    android:text="@string/escapeButton"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:textSize="34sp"
                    app:rippleColor="@color/Фиолетовый" />
            </LinearLayout>
        </LinearLayout>

        <!-- Правый столбец -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:layout_weight="0.2"
                android:id="@+id/helpButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/Жёлтый"
                android:text="@string/helpButton"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <!-- Кнопка "Вправо" -->
            <Button
                android:layout_weight="0.6"
                android:id="@+id/rightButton"
                android:layout_width="234dp"
                android:layout_height="166dp"
                android:backgroundTint="@color/Жёлтый"
                android:text="@string/rightButton"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="34sp"
                app:rippleColor="@color/Фиолетовый" />

            <Button
                android:layout_weight="0.2"
                android:id="@+id/mainButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/Жёлтый"
                android:text="Главное &#10; меню"
                android:textColor="@color/black"
                android:textSize="30sp" />
        </LinearLayout>
    </LinearLayout>

    <!-- Дублирующие кнопки для выравнивания (невидимые) -->

</androidx.constraintlayout.widget.ConstraintLayout>